<resources>
    <string name="app_name">Todo</string>
    <string name="icon_description">icon</string>
    <string name="register">Register</string>
    <string name="getStart">Get Stated</string>
    <string name="user_name">User Name</string>
    <string name="pass_word">Password</string>
    <string name="birth">Birthday</string>
    <string name="full_name">Full Name</string>
    <string name="input_your_user_name">Input your user name</string>
    <string name="input_pass">Input your password</string>
    <string name="input_your_name">Input your name</string>
    <string name="input_birthday">Input your birthday</string>
    <string name="login_icon">login_icon</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="remember_pass">Remember password</string>
    <string name="logan">You don\'t choose your passion. Your passion choose you.</string>
    <string name="yes">Yes</string>
</resources>
