<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_back"
    tools:context=".SplashActivity"
    tools:ignore="ScrollViewSize">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/icon_description"
        app:srcCompat="@drawable/ic_logo"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/loganId"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:gravity="center"
        android:text="@string/logan"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/registerID"
        android:layout_width="174dp"
        android:layout_height="60dp"
        android:layout_below="@id/loganId"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_rectangle_3"
        android:text="@string/getStart"
        android:textColor="@android:color/white"
        android:textSize="20sp" />
</RelativeLayout>