<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/formId"
    android:background="@drawable/ic_login_register_background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/icon2"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_login"
        android:contentDescription="@string/todo" />
    <TextView
        android:id="@+id/login_id"
        android:layout_width="wrap_content"
        android:textSize="34sp"
        android:text="@string/login"
        android:textStyle="bold"
        android:layout_below="@+id/icon2"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/usernameId_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_id"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_style"
        android:hint="@string/input_your_user_name"
        android:inputType=""
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/passId_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameId_login"
        android:layout_centerInParent="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/input_style"
        android:hint="@string/input_pass"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/cbRememberPass"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:layout_below="@id/passId_login"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_pass" />
    <Button
        android:id="@+id/loginID"
        android:layout_marginTop="15dp"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbRememberPass"
        android:textSize="18sp"
        android:layout_centerInParent="true"
        android:text="@string/login" />

    <TextView
        android:id="@+id/etRegisterID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginID"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:text=""
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        />

</RelativeLayout>
